实现,按上传按钮有信息框,但是有bug 多次点击发现有button 显示在主界面

--- a/MVCFileManagerDemo/MVCFileManagerDemo.csproj
+++ b/MVCFileManagerDemo/MVCFileManagerDemo.csproj
@@ -23,6 +23,7 @@
     <UseGlobalApplicationHostFile />
     <NuGetPackageImportStamp>
     </NuGetPackageImportStamp>
+    <Use64BitIISExpress />
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -526,6 +527,7 @@
     <Content Include="Content\themes\metro\validatebox.css" />
     <Content Include="Content\themes\metro\window.css" />
     <Content Include="Content\themes\newgis.css" />
+    <Content Include="Content\webuploader.css" />
     <Content Include="Global.asax" />
     <Content Include="Scripts\easyui-lang-zh_CN.js" />
     <Content Include="Scripts\file.js" />
